--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- 第２回追加コード -->
+    <link rel="icon" href="./img/favicon.ico">
 </head>
 <body>
     <div class="kv">
@@ -25,11 +27,29 @@
                 </div>
             </div>
             <div class="kv_text">
-                <p>大自然と調和する、極上の癒し。</p>
+                <!-- 第２回追加コード -->
+                <p>大自然と調和する、<br class="br_sp">極上の癒し。</p>
                 <p>
                     大分の自然環境と共に、<br>
-                    身も心も癒やされる至福のひとときを提供します。
+                    身も心も癒やされる<br class="br_sp">至福のひとときを提供します。
                 </p>
+            </div>
+        </div>
+    </div>
+    <!-- 第２回追加コード -->
+    <div class="about">
+        <div class="about_content">
+            <div class="about_text">
+                <img class="about_logo" src="./img/logo_gold.png" alt="">
+                <p>
+                    自然美に囲まれた楽園で、<br>
+                    贅沢な癒しのひとときを<br>
+                    お過ごしください。
+                </p>
+            </div>
+            <div class="about_images">
+                <img src="./img/about_img_1.png" alt="">
+                <img src="./img/about_img_2.png" alt="">
             </div>
         </div>
     </div>
