--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechElite課題</title>
+    <title>楽園雅苑</title>
+    <meta name="description" content="楽園雅苑は大分の自然環境と共に、身も心も癒やされる至福のひとときを提供します。" />
+    <meta name="keywords" content="楽園雅苑,大分,宿泊,宿,温泉,旅行" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet">
