--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>楽園雅苑</title>
-    <meta name="description" content="楽園雅苑は大分の自然環境と共に、身も心も癒やされる至福のひとときを提供します。" />
-    <meta name="keywords" content="楽園雅苑,大分,宿泊,宿,温泉,旅行" />
+    <title>TechElite課題</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <!-- 第２回追加コード -->
     <link rel="icon" href="./img/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <!--  -->
 </head>
 <body>
     <div class="kv">
@@ -35,6 +34,7 @@
                     大分の自然環境と共に、<br>
                     身も心も癒やされる<br class="br_sp">至福のひとときを提供します。
                 </p>
+                <!--  -->
             </div>
         </div>
     </div>
@@ -55,5 +55,35 @@
             </div>
         </div>
     </div>
+    <div class="room">
+        <img class="room_cloud" src="./img/room_cloud.png" alt="">
+        <div class="room_content">
+            <div class="content_title flex_center">
+                <p class="ja_title">お部屋</p>
+                <div class="line"></div>
+                <p class="en_title">room</p>
+            </div>
+            <p class="room_description">
+                「楽園雅苑」の豪華なお部屋は、大分県自然の美しさと格式の高いサービスが調和した完璧な空間を提供します。桜花の調べが響くプレミアスィート、静寂の庭園に囲まれたデラックスルーム、そして自然のぬくもりを感じるスタンダードルーム。どの部屋も極上の癒しとくつろぎがお待ちしております。贅沢な温泉体験と非日常のくつろぎをお楽しみください。
+            </p>
+            <div class="room_select">
+                <div class="room_select_list flex_center">
+                    <p class="active">
+                        スタンダードルーム<br>
+                        - 自然のぬくもり -
+                    </p>
+                    <p>
+                        デラックスルーム<br>
+                        - 静寂の庭園 -
+                    </p>
+                    <p>
+                        プレミアスィート<br>
+                        - 桜花の調べ -
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--  -->
 </body>
 </html>
