--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./css/style.css">
-    <!-- 第２回追加コード -->
     <link rel="icon" href="./img/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <!--  -->
 </head>
 <body>
     <div class="kv">
@@ -28,17 +26,14 @@
                 </div>
             </div>
             <div class="kv_text">
-                <!-- 第２回追加コード -->
                 <p>大自然と調和する、<br class="br_sp">極上の癒し。</p>
                 <p>
                     大分の自然環境と共に、<br>
                     身も心も癒やされる<br class="br_sp">至福のひとときを提供します。
                 </p>
-                <!--  -->
             </div>
         </div>
     </div>
-    <!-- 第２回追加コード -->
     <div class="about">
         <div class="about_content">
             <div class="about_text">
@@ -68,22 +63,47 @@
             </p>
             <div class="room_select">
                 <div class="room_select_list flex_center">
-                    <p class="active">
+                    <p id="standard" class="active">
                         スタンダードルーム<br>
                         - 自然のぬくもり -
                     </p>
-                    <p>
+                    <p id="deluxe">
                         デラックスルーム<br>
                         - 静寂の庭園 -
                     </p>
-                    <p>
+                    <p id="premium">
                         プレミアスィート<br>
                         - 桜花の調べ -
                     </p>
                 </div>
             </div>
+            <div class="rooms">
+                <div id="standard_content" class="room_view active">
+                    <img src="./img/room_standard.jpg" alt="スタンダードルーム 自然のぬくもり">
+                    <div class="room_textarea">
+                        <p class="title">自然のぬくもり</p>
+                        <p class="text">「自然のぬくもり」スタンダードルームは、自然との共感を感じるお部屋です。山の景色を楽しむことができ、ナチュラルリトリートプランには朝食が含まれています。心地よいぬくもりとくつろぎのひとときを提供します。</p>
+                    </div>
+                </div>
+                <div id="deluxe_content" class="room_view">
+                    <img src="./img/room_deluxe.jpg" alt="デラックスルーム 静寂の庭園">
+                    <div class="room_textarea">
+                        <p class="title">静寂の庭園</p>
+                        <p class="text">「静寂の庭園」デラックスルームは、静寂と美しさに包まれた部屋です。個別の温泉ビューバルコニーからは、美しい庭園と温泉の景色が広がります。ロマンティックゲットアウェイプランで、特別なひとときを過ごしましょう。</p>
+                    </div>
+                </div>
+                <div id="premium_content" class="room_view">
+                    <img src="./img/room_premium.jpg" alt="プレミアスィート 桜花の調べ">
+                    <div class="room_textarea">
+                        <p class="title">桜花の調べ</p>
+                        <p class="text">「桜花の調べ」プレミアスィートは、最高級のラグジュアリーを追求した特別なお部屋です。広々とした空間に、温泉露天風呂が設けられ、そこからは四季折々の美しい景色を楽しむことができます。</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <!--  -->
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
