レイアウト修正

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </div>
                 </div>
             </div>
-            <div class="flex_center form_content form_select">
+            <div class="flex_center form_content">
                 <p>ご希望の宿泊プラン<span>＊</span></p>
                 <div class="input_content">
                     <div class="form_select">
